cross origin managed to accept all request